[tool.poetry]
name = "yahoo-news"
version = "0.1.0"
description = "scraping Amazon books"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
fake-useragent = "^1.4.0"
selenium = "^4.16.0"
colorlog = "^6.8.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
